# ghc-as-lib

./: .gitignore  Compile.hs  CompileHs.hs  HMain.hs  Instance.hs  Main.hs  MyPlugin.hs  README.md  Similar.hs  Test.hs  Transform.hs  Utils.hs  cabal.project  ghc-as-lib.cabal
MyPlug/: CHANGELOG.md  MyPlug.cabal  MyPlugin.hs
dupli/: Mod2.hs  Mod3.hs  Mod6.hs  Mod8.hs  Test.hs  Test2.dump-ds-preopt  Test2.hs  Test3.hs  Test5.hs  Test6.hs  Test7.hs  Test9.hs
dupli/good/: Mod1.hs  Mod6.hs  Test2.hs  Test5.hs  Test6.hs  Test7.hs
dupli/norm/: Mod9.hs  Test8.hs  Test9.hs
factorial/norm/: Mod1.hs  Mod2.hs  Mod3.hs  Mod4.hs  Test1.hs  Test2.hs  Test3.hs
fromBin/good/: Test1.hs
frombin/: Mod2.hs  Test2.hs
frombin/good/: Mod1.hs  Mod3.hs  Test1.hs  Test3.hs
frombin/norm/: Test2.hs
ghc-as-lib/: Analyse.hs  Compile.hs  CompileHs.hs  Diff.hs  Feedback.hs  HoleMatches.hs  Instance.hs  Pragmas.hs  PrettyPrint.hs  Print.hs  Rewrite.hs  Rules.hs  Similar.hs  Test.hs  Transform.hs  TypeCheckW.hs  Utils.hs  Warning.hs  ghc-as-lib.cabal
ghc-as-lib/Testing/larger_examples/: Nat.hs  Sudoku.hs
ghc-as-lib/dupli/: Test.hs  TestProg.hs  TestSimpl.hs
ghc-as-lib/dupli/good/: Test2.hs
ghc-as-lib/dupli/norm/: Mod8.hs  Test8.hs  Test9.hs
ghc-as-lib/factorial/norm/: Mod1.hs  Mod3.hs
ghc-as-lib/larger_examples/: Mod1.hs  Test1.hs
ghc-as-lib/modelsolutions/haskell/encoding/fromBin/: Acc.hs  Config.hs  Foldl.hs  ZipWith.hs
ghc-as-lib/modelsolutions/haskell/list/compress/: Config.hs  Solution81.hs  Solution82.hs  Solution83.hs  Solution84.hs  Solution85.hs
ghc-as-lib/modelsolutions/haskell/list/dropevery/: Config.hs  Solution161.hs  Solution162.hs  Solution163.hs  Solution164.hs
ghc-as-lib/modelsolutions/haskell/list/dupli/: Config.hs  DupliConcatMap.hs  DupliExpRec1.hs  DupliFoldl.hs  DupliFoldr.hs
ghc-as-lib/modelsolutions/haskell/list/eacheven/: Config.hs  EachEvenMap.hs
ghc-as-lib/modelsolutions/haskell/list/elementat/: Config.hs  Solution31.hs  Solution32.hs
ghc-as-lib/modelsolutions/haskell/list/encode/: Config.hs  Encode1.hs  Encode2.hs  Encode3.hs  Encode4.hs
ghc-as-lib/modelsolutions/haskell/list/identity/: Config.hs  Identity1.hs  Identity2.hs  Identity4.hs
ghc-as-lib/modelsolutions/haskell/list/myconcat/: Concat1.hs  Concat2.hs  Concat3.hs  Config.hs
ghc-as-lib/modelsolutions/haskell/list/myfilter/: Config.hs  Filter1.hs  Filter2.hs  Filter3.hs
ghc-as-lib/modelsolutions/haskell/list/mylast/: Config.hs  Solution11.hs  Solution12.hs  Solution13.hs  Solution14.hs  Solution15.hs
ghc-as-lib/modelsolutions/haskell/list/mylength/: Config.hs  Solution41.hs  Solution42.hs  Solution43.hs
ghc-as-lib/modelsolutions/haskell/list/mymax/: Config.hs
ghc-as-lib/modelsolutions/haskell/list/myreverse/: Config.hs  ReverseAcc.hs  ReverseFoldl.hs  ReverseRec.hs
ghc-as-lib/modelsolutions/haskell/list/pack/: Config.hs  Solution91.hs  Solution92.hs  Solution93.hs  Solution94.hs  Solution95.hs
ghc-as-lib/modelsolutions/haskell/list/palindrome/: Config.hs  Solution61.hs  Solution62.hs
ghc-as-lib/modelsolutions/haskell/list/primes/: Config.hs  Primes1.hs  Primes2.hs  Primes3.hs
ghc-as-lib/modelsolutions/haskell/list/range/: Config.hs  DotDot.hs  Dots.hs  IfThenElse.hs  Iterate.hs  Recursion.hs  Unfoldr.hs  Using enum.hs
ghc-as-lib/modelsolutions/haskell/list/removeat/: Config.hs  Solution201.hs  Solution202.hs  Solution203.hs
ghc-as-lib/modelsolutions/haskell/list/repli/: Config.hs  Solution151.hs  Solution152.hs  Solution153.hs  Solution154.hs
ghc-as-lib/modelsolutions/haskell/list/rotate/: Config.hs  Solution191.hs  Solution192.hs  Solution193.hs
ghc-as-lib/modelsolutions/haskell/list/slice/: Config.hs  Solution181.hs  Solution182.hs  Solution183.hs  Solution184.hs  Solution185.hs  Solution186.hs
ghc-as-lib/modelsolutions/haskell/list/split/: Config.hs  Solution171.hs  Solution172.hs  Solution173.hs
ghc-as-lib/modelsolutions/haskell/list/transpose/: Config.hs  Transpose1.hs  Transpose2.hs  Transpose3.hs
ghc-as-lib/modelsolutions/haskell/tuple/allpairs/: AllPairsConcatMapMap.hs  AllPairsConcatMapZip.hs  Config.hs
ghc-as-lib/modelsolutions/haskell/tuple/pairs/: Pairs1.hs  config  description
ghc-as-lib/modelsolutions/haskell/tuple/simplify/: Simplify1.hs  config  description
ghc-as-lib/modelsolutions/haskell/tuple/uncurry/: Myuncurry.hs  config  description
ghc-as-lib/myreverse/bad/: Test1.hs
ghc-as-lib/myreverse/good/: Mod1.hs  Mod3.hs  Mod4.hs  Mod5.hs  Mod6.hs  Test3.hs  Test5.hs  Test7.hs
ghc-as-lib/other/good/: Test3.hs  Test9.hs
ghc-as-lib/src/: Annotation.hs  Diagnose.hs  Rules.hs
ghc-as-lib/src/Compile/: Compile.hs  Transform.hs  Warning.hs
ghc-as-lib/src/Feedback/: Analyse.hs  Feedback.hs  HoleMatches.hs  PrintHoleMatch.hs
ghc-as-lib/src/Instances/: Diff.hs  ShowAS.hs  Similar.hs
ghc-as-lib/src/Transform/: Eta.hs  Inline.hs  Remove.hs  Rename.hs  Transform.hs
ghc-as-lib/src/Utils/: File.hs  String.hs  Utils.hs
ghc-as-lib/src/dev/: CompileHs.hs  Parsers.hs
ghc-as-lib/studentfiles/: Temp.hs  Temp2.hs  completenew.json  missingnew.json  ontracknew.json  testpassed.json  testpassednew.json  unknown.json  unknownnew.json
ghc-as-lib/testfiles/dupli/good/: Mod1.hs  Mod2.hs  Mod7.hs  Mod8.hs  Test1.hs  Test2.hs  Test7.hs
ghc-as-lib/testfiles/dupli/norm/: Mod6.hs  Mod8.hs
ghc-as-lib/testfiles/factorial/norm/: Test4.hs
ghc-as-lib/testfiles/larger_examples/: Mod1.hs  Test1.hs
ghc-as-lib/testfiles/myreverse/bad/: Mod2.hs
ghc-as-lib/testfiles/myreverse/good/: Mod5.hs  Mod7.hs  Test6.hs  Test7.hs
ghc-as-lib/testfiles/other/good/: Mod10.hs  Mod9.hs  Test10.hs  Test11.hs  Test4.hs
ghc-as-lib/testfiles/other/norm/: Mod2.hs  Test2.hs
ghc-as-lib/tests/: BenchMark.hs  CoreLint.hs  Test.hs
ghc-as-lib/tests/larger_examples/: BlackJack.hs  Eval.hs  Gadt.hs  Nat.hs  Power.hs
ghc-as-lib/tests/studentfiles/: Temp.hs  Temp2.hs  complete.json  completenew.json  missingcases.json  ontrack.json  ontracknew.json  unknownnew.json
myreverse/: Mod2.hs  Test1.hs
myreverse/bad/: Test2.hs  Test3.hs
tests/: TransformationTests.hs
(+5 files in other folders)
