cabal-version:      2.4
name:               ghc-as-lib
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Using GHC as a library to compile Haskell code
-- to different compiler passes. 

-- A longer description of the package.
-- description: Including experimental transformations on GHCs 
-- Core AST. 

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author: Matilda B

extra-source-files: CHANGELOG.md

executable compile-ghc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    --other-modules:    

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16, ghc-paths, ghc, ghc-boot 
                      ,filepath 
                      ,containers
                      ,transformers
                      ,uniplate == 1.6.13
                      ,text 
                      ,lens 
                      ,directory
                      ,random
                      ,comonad 
                      ,data-default
                      ,optparse-applicative
                      
    default-language: Haskell2010
    other-modules:    Similar, Instance, HMain, Transform, Utils 


