cabal-version:      2.4
name:               ghc-as-lib
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Using GHC as a library to compile Haskell code
-- to different compiler passes. 

-- A longer description of the package.
-- description: Including experimental transformations on GHCs 
-- Core AST. 

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author: Matilda B

extra-source-files: CHANGELOG.md
--
--executable test 
--  main-is: BenchMark.hs
--  hs-source-dirs: tests, src  
--  build-depends: criterion
--                ,base >=4.16
--                ,ghc-paths 
--                ,ghc >=9.2.5 && < 9.3
--                ,ghc-boot
--                ,ghc-prim
--                ,ghc-exactprint
--                ,filepath 
--                ,containers
--                ,transformers
--                ,QuickCheck
--                ,uniplate
--                ,exceptions
--                ,text 
--                ,lens 
--                ,directory
--                ,random
--                ,comonad 
--                ,data-default
--                ,optparse-applicative
--                ,template-haskell 
--                ,utility-ht
--                ,aeson
--                ,temporary
--                ,bytestring
--                ,splint 
--                ,parsec
--                ,text-replace
--
--  other-modules: Similar 
--                ,Instance 
--                ,Transform 
--                ,Utils
--                ,Test 
--                ,CompileHs
--                ,Parsers
--                ,HoleMatches
--                ,Print
--                ,Analyse
--                ,Diff
--                ,HoleMatches
--                ,Instance
--                ,Feedback
--                ,Warning
--                ,Pragmas
--                ,Annotation
--                ,Compile 
--
library comp
    exposed-modules:  Compile.Compile
    hs-source-dirs:   src/ 
                      tests/
    build-depends:    base >=4.16
                      ,ghc-paths 
                      ,ghc >=9.2.5 && < 9.3
                      ,ghc-boot
                      ,ghc-prim
                      ,ghc-exactprint
                      ,filepath 
                      ,containers
                      ,transformers
                      ,QuickCheck
                      ,uniplate
                      ,exceptions
                      ,text 
                      ,lens 
                      ,directory
                      ,random
                      ,comonad 
                      ,data-default
                      ,optparse-applicative
                      ,template-haskell 
                      ,utility-ht
                      ,aeson
                      ,temporary
                      ,bytestring
                      ,splint 
                      ,parsec
                      ,text-replace 

    default-language: Haskell2010
    other-modules:    Instances.Similar 
                      ,Instances.ShowAS 
                      ,Transform.Transform
                      ,Transform.Eta
                      ,Transform.Inline
                      ,Transform.Remove
                      ,Transform.Rename
                      ,Utils.Utils
                      ,Utils.File 
                      ,Utils.String 
                      ,Feedback.PrintHoleMatch
                      ,Feedback.HoleMatches
                      ,Feedback.Analyse
                      ,Instances.Diff
                      ,Feedback.Feedback
                      ,Compile.Warning 
                      ,Test
                      ,CoreLint
                      ,Diagnose 

